--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/fonts.css" />
     <link rel="stylesheet" href="css/colors.css" />
-    <title>Marc Jurell Afable</title>
+    <title>TSA-1 Resume</title>
   </head>
   <body>
     <div class="container">
@@ -16,11 +16,12 @@
           <p>Address: Mandaluyong, Philippines</p>
           <p>Contanct No.: +639763190715</p>
           <p>Email: jurell02afable@gmail.com</p>
+             <input type="button" value="Change color" id="colorButton" />
         </div>
         <div class="ID-picture">
-          <img src="images/Afable,Marc Jurell.jpg" alt="" />
+          <img src="images/Afable,Marc Jurell.png" alt="" />
         </div>
-        <input type="button" value="Change color" id="colorButton" />
+        
       </header>
 
       <section class="Objective">
